# crabtype

./: Cargo.toml  LICENSE  README.md
src/: main.rs  states.rs  typingwidget.rs
src/states/: stats.rs  typing.rs
words/: english_1k.json
