[package]
name = "crabtype"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
crossterm = "0.27"
clap = { version = "4.3.23", features = ["derive"] }
itertools = "0.11"
strum = {version = "0.25", features = ["derive"]}
